--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
